syntax = "proto3";

package proto;

service StreamService {
    rpc BaseServer(StreamRequest) returns (stream StreamResponse) {};

    rpc BaseClient(stream StreamRequest) returns (StreamResponse) {};

    rpc BaseDouble(stream StreamRequest) returns (stream StreamResponse) {};
}

message StreamRequest {
    string name = 1;
    int64 age = 2;
}

message StreamResponse {
    string name = 1;
    int64 age = 2;
}